# mudpuppy

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
.config/: config.toml
.github/: dependabot.yml
.github/workflows/: book.yml  cron-linkcheck.yml  linkcheck.yml  nix.yml  release.yml  rust.yml  site.yml
api-docs/: cformat.html  commands.html  history.html  index.html  layout.html  mudpuppy.html  mudpuppy_core.html  search.js  telnet_charset.html  telnet_naws.html
mudpuppy/: Cargo.toml  build.rs
mudpuppy/python/: cformat.py  cmd_alias.py  cmd_bindings.py  cmd_misc.py  cmd_py.py  cmd_status.py  cmd_timer.py  cmd_trigger.py  commands.py  history.py  layout.py  mudpuppy.py  mudpuppy_pdoc.py  telnet_charset.py  telnet_naws.py
mudpuppy/src/: app.rs  cli.rs  config.rs  dialog.rs  error.rs  headless.rs  idmap.rs  keyboard.rs  lib.rs  main.rs  model.rs  mouse.rs  new_config.rs  panic.rs  python.rs  shortcut.rs  slash_command.rs
mudpuppy/src/client/: gmcp.rs  input.rs  mod.rs  output.rs  prompt_flusher.rs
mudpuppy/src/config/: config_file.rs  keybindings.rs  logging.rs  mod.rs
mudpuppy/src/net/: connection.rs  mod.rs  stream.rs
mudpuppy/src/net/telnet/: codec.rs  mod.rs  negotiation.rs
mudpuppy/src/python/: api.rs  cmd_py.py  command.rs  events.rs  headless.py  history.py  logging.py  mod.rs  pup_events.py  telnet_charset.py  telnet_naws.py  tui.py
mudpuppy/src/session/: alias.rs  buffer.rs  character.rs  gmcp.rs  input.rs  mod.rs  mudline.rs  prompt.rs  timer.rs  trigger.rs
mudpuppy/src/tui/: annotation.rs  buffer.rs  button.rs  char_menu.rs  chrome.rs  commandline.rs  custom_tab.rs  extrabuffer.rs  gauge.rs  input.rs  layout.rs  mod.rs  mudbuffer.rs  mudlist.rs  reflow.rs  session.rs  splitview.rs
pdoc-templates/: index.html.jinja2  syntax-highlighting.css  theme.css
pup/: Cargo.toml  build.rs
pup/src/: app.rs  cli.rs  config.rs  error.rs  headless.rs  keyboard.rs  logging.rs  main.rs  panic.rs  shortcut.rs  slash_command.rs
pup/src/net/: connection.rs  mod.rs  stream.rs
pup/src/net/telnet/: codec.rs  mod.rs  negotiation.rs
pup/src/python/: api.rs  cmd_py.py  command.rs  events.rs  headless.py  history.py  mod.rs  pup_events.py  setup.py  telnet_charset.py  telnet_naws.py
pup/src/session/: alias.rs  buffer.rs  character.rs  gmcp.rs  input.rs  mod.rs  mud.rs  output.rs  prompt.rs  trigger.rs
pup/src/tui/: buffer.rs  char_menu.rs  chrome.rs  commandline.rs  layout.rs  mod.rs  mudlist.rs  output_buffer.rs  session.rs
python-examples/: custom_layout.py  global_send_shortcut.py  gmcp_channels.py  gmcp_status.py  install.sh  pup_customtab.py  pup_gmcp_channels.py  pup_spellcheck.py  pup_test.py  spellcheck.py  title_anim.py  user_test.py  window_demo.py
python-stubs/: cformat.pyi  commands.pyi  layout.pyi  mudpuppy.pyi  mudpuppy_core.pyi  pup.pyi  pup_events.pyi  render_api_docs.py
python-typings/: README.md  cformat.pyi  commands.pyi  history.pyi  layout.pyi  mudpuppy.pyi
user-guide/: README.md  book.toml
user-guide/src/: SUMMARY.md  cli.md  commands.md  config.md  input.md  introduction.md  logging.md
user-guide/src/config/: README.md  keybindings.md  mouse.md  muds.md
user-guide/src/scripting/: README.md  aliases.md  custom_commands.md  editing.md  output.md  prompts.md  timers.md  triggers.md
user-guide/src/tutorial/: README.md
web/: .gitignore  index.html
