[workspace]
members = [
    "mudpuppy",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74.0"
license = "MIT"
authors = ["Daniel McCarney <daniel@binaryparadox.net>"]
homepage = "https://github.com/mudpuppy-rs/mudpuppy"
repository = "https://github.com/mudpuppy-rs/mudpuppy"
categories = ["games"]
keywords = ["MUD", "telnet", "TUI", "terminal", "multiplayer"]
description = "A terminal MUD client, scripted with Python"

[workspace.dependencies]
# TODO(XXX): update ansi-to-tui.
ansi-to-tui = "5.0.0-rc.1"
async-trait = "0.1"
better-panic = "0.3"
clap = "4"
config = { version = "0.14", default-features = false }
console-subscriber = "0.4"
crossterm = { version = "0.27", default-features = false }
deref-derive = "0.1"
directories = "5"
futures = "0.3"
happy-eyeballs = { version = "0.2", default-features = false }
human-panic = "2"
notify = "6"
pretty_assertions = "1"
pyo3 = { version = "0.22", features = ["experimental-async", "py-clone"] }
pyo3-async-runtimes = { version = "0.21", features = ["attributes", "tokio-runtime"] }
pyo3-pylogger = "0.3"
# TODO(XXX): update ratatui.
ratatui = { version = "0.27", default-features = false }
regex = "1"
serde = "1"
serde_json = "1"
socket2 = "0.5"
strip-ansi-escapes = "0.2"
thiserror = "1"
tokio = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "logging", "ring"] }
tokio-util = "0.7"
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
unicode-segmentation = "1"
# TODO(XXX): use version pinned by ratatui.
unicode-width = "0.1"
webpki-roots = "0.26"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
match_bool = "allow"
missing_panics_doc = "allow"

[workspace.metadata.dist]
cargo-dist-version = "0.15.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
install-updater = true

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true

[profile.dist]
inherits = "release"

[patch.crates-io]
# TODO(@cpu): remove once pyo3-async-runtimes cuts a 0.22 release.
pyo3-async-runtimes  = { git = 'https://github.com/PyO3/pyo3-async-runtimes.git', rev = '284bd36d0426a988026f878cae22abdb179795e6' }