[package]
name = "mudpuppy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
async-trait = { workspace = true }
ansi-to-tui = { workspace = true }
better-panic = { workspace = true }
console-subscriber = { workspace = true, optional = true }
config = { workspace = true, features = ["toml"] }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true, features = ["event-stream", "bracketed-paste"] }
directories = { workspace = true }
futures = { workspace = true }
happy-eyeballs = { workspace = true, features = ["tokio"] }
human-panic = { workspace = true }
notify = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-pylogger = { workspace = true }
ratatui = { workspace = true, default-features = true, features = ["unstable-widget-ref"] }
regex = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strip-ansi-escapes = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "io-std"] }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "serde"] }
webpki-roots = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
